[package]
name = "cogru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.38"
clap = "4.5.4"
dunce = "1.0.4"
ignore = "0.4.22"
path-slash = "0.2.1"
rpassword = "7.3.1"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
